# voxels03

./: .gitignore  Cargo.toml  voxels03.code-workspace
client/: ARCHITECTURE.md  Cargo.toml
client/assets/shaders/: compile.py  textured_full_cube.vert  textured_lit.frag
client/common/src/: assets.rs
client/netcode/: Cargo.toml
client/netcode/src/: lib.rs  login.rs  net_thread.rs  util.rs
client/renderer/: Cargo.toml
client/renderer/src/: camera.rs  lib.rs  state.rs  vulkan.rs
client/renderer/src/ash_port/: mod.rs
client/renderer/src/ash_port/game_renderer/: mod.rs  state.rs  world.rs
client/renderer/src/ash_port/vulkan/: debug_callback.rs  mod.rs  uploader.rs  util.rs
client/renderer/src/game_renderer/: mod.rs  state.rs  world.rs
client/renderer/src/vulkan/: mod.rs  uploader.rs
client/src/: game_view.rs  main.rs  main_menu_view.rs  resources.rs  views.rs
client/src/game_view/: state.rs
client/src/util/: input.rs  mod.rs
client/src/util/input/: keyboard.rs
client/src/world/: chunk.rs  chunk_map.rs  ecs.rs  mod.rs
core/: Cargo.toml
core/src/: anti_jitter.rs
crates/common/src/: assets.rs
crates/netcode/: Cargo.toml
server/: Cargo.toml
server/netcode/: Cargo.toml
server/netcode/src/: channels.rs  lib.rs  login_listener.rs  message.rs  net_thread.rs  util.rs
server/src/: main.rs  runner.rs  server.rs
shared/src/: bits_and_bytes.rs  lib.rs  net.rs
shared/src/bits_and_bytes/: bit_reader.rs  bit_writer.rs  byte_reader.rs  byte_writer.rs  tests.rs
shared/src/serialization/: byte_reader.rs  byte_writer.rs  mod.rs  tests.rs
src/: game_view.rs  main_menu_view.rs  resources.rs  views.rs
src/util/input/: mouse.rs
src/world/: block.rs  dimension.rs
