[workspace]
members = ["crates/*", "core"]
exclude = ["server"]

[package]
name = "voxels03"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
winit = "0.27.5"
rayon = "1.6.0"
glam = "0.22.0"
hecs = "0.9.1"
quinn = { git = "https://github.com/quinn-rs/quinn" }

arboard = "3.2.0"
anyhow = "1.0.66"
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.23"

common = { path = "crates/common" }
netcode = { path = "crates/netcode" }
renderer = { path = "crates/renderer" }

# Shared between client and server
core = { path = "core" }