[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.27.5"
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-util = { git = "https://github.com/vulkano-rs/vulkano" }
bytemuck = "1.12.3"
glam = "0.22.0"
anyhow = "1.0.66"
log = "0.4.17"
xalloc = "0.2.7"
ash = "0.37.1"
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
gpu-allocator = "0.21.0"

common = { path = "../common" }