[package]
name = "netcode"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
tokio = { version = "1.22.0", default-features = false, features = ["rt", "macros", "sync"] }
rustls = { version = "0.20.7", default-features = false, features = ["dangerous_configuration", "quic"] }
quinn = { git = "https://github.com/quinn-rs/quinn" }
rcgen = "0.10.0"
bit_serializer = "0.0.1"

core = { path = "../../core" }