[package]
name = "netcode"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
tokio = { version = "1.22.0", default-features = false, features = ["rt", "rt-multi-thread", "macros", "sync"] }
rustls = { version = "0.20.7", default-features = false, features = ["dangerous_configuration", "quic"] }
quinn = { git = "https://github.com/quinn-rs/quinn" }
rcgen = "0.10.0"
bit_serializer = "0.0.1"
flexstr = "0.9.2"
anyhow = "1.0.66"
glam = "0.22.0"
log = "0.4.17"

shared = { path = "../../shared" }